--- a/src/components/Accordion/style.module.css
+++ b/src/components/Accordion/style.module.css
@@ -3,7 +3,7 @@
   border-radius: 10px;
   display: flex;
   height: 75px;
-  justify-content: center;
+  justify-content: space-between;
   background-color: #f7f7f7;
   margin: 30px 0 0 0;
   transition: 0.3s ease-in-out;
@@ -13,7 +13,7 @@
   height: 80px;
   border-radius: 10px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   background-color: #f7f7f7;
   margin: 30px 0 0 0;
   transition: 0.3s ease-in-out;
@@ -86,4 +86,10 @@
   font-size: 13.5px;
   font-weight: 500;
   gap: 10px;
+  margin-right: auto;
+}
+
+.iconContainer{
+  margin-right: auto;
+  /* padding-right: 60px; */
 }
