--- a/src/components/Popover/style.module.css
+++ b/src/components/Popover/style.module.css
@@ -5,8 +5,10 @@
 }
 
 .children{
+    cursor: pointer;
     background-color: transparent;
     border: none;
+    padding: 10px;
 }
 
 .Popover {
@@ -49,7 +51,7 @@
 
 .red:hover {
     background-color: #F3F3F5;
-    color: rgb(157, 14, 14);
+    color: rgb(219, 0, 0);
     border-radius: 8px;
 
 }
