--- a/src/components/Accordion/style.module.css
+++ b/src/components/Accordion/style.module.css
@@ -1,8 +1,8 @@
 .wrapper {
+  /* height: 100%; */
   height: 336px;
   border-radius: 10px;
   display: flex;
-  height: 75px;
   justify-content: space-between;
   background-color: #f7f7f7;
   margin: 30px 0 0 0;
@@ -21,7 +21,7 @@
 }
 
 .container {
-  width: 400px;
+  width: 100%;
   border: 0px solid #ccc;
   border-radius: 5px;
   overflow: hidden;
