--- a/src/components/NewMessageForm/style.module.css
+++ b/src/components/NewMessageForm/style.module.css
@@ -28,3 +28,13 @@
     flex-direction: row-reverse;
     margin: 30px;
 }
+
+.timing{
+    background-color:  #F7F7F7;
+ } 
+ 
+ .pickers{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+ }
