--- a/src/components/NewMessageForm/style.module.css
+++ b/src/components/NewMessageForm/style.module.css
@@ -26,7 +26,7 @@
     align-items: center;
     display: flex;
     flex-direction: row-reverse;
-    margin: 30px;
+    margin: 30px 0px;
 }
 
 /* .timing{
