--- a/src/components/MsgTab/style.module.css
+++ b/src/components/MsgTab/style.module.css
@@ -1,8 +1,8 @@
 .msgTab {
     display: flex;
     flex-direction: column;
-    /* width: 300px; */
-    max-width: 300px;
+    width: 400px;
+    max-width: 400px;
     width: 100%;
     height: 100%;
     border-left: 2px solid var(--grayElement);
