--- a/src/components/TabSwitcher/style.module.css
+++ b/src/components/TabSwitcher/style.module.css
@@ -41,6 +41,6 @@ a {
 .allcom {
     display: flex;
     width: 100%;
-    padding-bottom: 10px;
-    border-bottom: 2px solid var(--grayElement);
+    padding-bottom: 20px;
+    /* border-bottom: 2px solid var(--grayElement); */
 }
