--- a/src/components/CheckBox/style.module.css
+++ b/src/components/CheckBox/style.module.css
@@ -1,14 +1,19 @@
 .CheckBoxFunction {
   /* position: relative; */
   display: flex;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center ;
 }
 
 .svg {
-  width: 21px;
-  height: 21px;
+  width: 15px;
+  height: 15px;
   margin-top: 3px;
   border: solid black 1px;
-  border-radius: 8px;
+  border-radius: 5px;
   margin-left: 10px;
   display: flex;
   justify-content: center;
@@ -23,8 +28,11 @@
   color: black;
   text-decoration: underline;
 }
-.vi{
-    color: blue;
+
+.vi {
+  color: blue;
 }
 
-/* checkbox checked */
+.text {
+  font-size: 13px;
+}
