--- a/src/components/Register/style.module.css
+++ b/src/components/Register/style.module.css
@@ -1,15 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 .button {
-    /* display: flex; */
-    /* align-items: center; */
-    /* justify-content: center; */
     width: 100%;
     height: 40px;
     border-radius: 7px;
     background-color: #0E9D85;
     margin: 5px 0 5px 0;
-    border: 0px solid magenta;
+    border: 0px solid gray;
+    font-size: 15px;
+    color: white;
+}
+
+.button1 {
+    width: 100%;
+    height: 40px;
+    border-radius: 7px;
+    background-color: gray;
+    margin: 20px 0 10px 0;
+    padding: 9px;
+    border: 0px solid gray;
     font-size: 15px;
     color: white;
 }
@@ -21,6 +30,21 @@
     background-color: white;
     margin: 5px 0 10px 0;
     border: 2px solid #0E9D85;
+    font-size: 15px;
+    color: rgba(0, 0, 0, 0.747);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 7px;
+}
+
+.buttongoogle1 {
+    width: 100%;
+    height: 40px;
+    border-radius: 7px;
+    background-color: white;
+    margin: 5px 0 10px 0;
+    border: 2px solid gray;
     font-size: 15px;
     color: rgba(0, 0, 0, 0.747);
     display: flex;
