--- a/src/components/WebHook/style.module.css
+++ b/src/components/WebHook/style.module.css
@@ -1,13 +1,14 @@
 .container{
     width: 590px;
     max-width: 100%;
-    height: 150px;
+    /* height: 150px; */
     background-color: #F7F7F7;
     padding: 20px;
     display: flex;
     flex-direction: column;
     /* align-items: center; */
     justify-content: center;
+    gap: 20px;
 }
 .pas{
     font-size:small;
@@ -28,6 +29,7 @@
     border-radius: 7px;
     display: flex;
     align-items: center;
+    gap: 3px;
 }
 .pLink{
     padding-left: 15px;
