--- a/src/components/Login/style.module.css
+++ b/src/components/Login/style.module.css
@@ -51,6 +51,8 @@
     font-size: 35px;
     font-weight: 700;
     margin-top: 20px;
+    font-family: var(--header-font);
+    font-weight: 500;
 }
 
 .title2 {
@@ -58,7 +60,8 @@
     margin: -7px 0 0 0;
     display: flex;
     font-size: 18px;
-    font-weight: 700;
+    font-family: var(--header-font);
+    font-weight: 400;
 }
 
 .input {
