--- a/src/components/Register/style.module.css
+++ b/src/components/Register/style.module.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap'); */
 
 .button {
     width: 100%;
@@ -64,14 +64,18 @@
     font-size: 35px;
     font-weight: 700;
     margin-top: 20px;
+    font-family: var(--header-font);
+    font-weight: 500;
 }
 
 .title2 {
     /* background-color: aqua; */
+    font-family: var(--header-font);
+    font-weight: 400;
     margin: -7px 0 0 0;
     display: flex;
     font-size: 18px;
-    font-weight: 700;
+    /* font-weight: 700; */
 }
 
 .input {
