--- a/src/components/FeedBack/style.module.css
+++ b/src/components/FeedBack/style.module.css
@@ -1,36 +1,161 @@
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-.InputWrapper {
-    justify-content: center;
-    display: flex;
-    padding:20px;
-
-
-}
-.asterisk{
-    color: red;
-}
-
-.input1 {
-    margin: 30px;
-
+.container {
+    width: 80vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-end
+    justify-content: center;
+    align-items: start;
+    text-align: right;
+    background-color: hsla(0, 0%, 97%, 0.85);
 }
 
-.label2 {
-    color: cadetblue;
-    margin: 5px;
-}
-
-.actions {
-    height: 40px;
-
-    justify-content: space-between;
-    align-items: center;
+.allin {
+    width: 600px;
+    height: auto;
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-right: 100px;
+}
 
-    margin: 30px;
+.circle {
+    /* background-color: ; */
+    border: 130px solid rgba(14, 157, 133, 0.103)    ;
+    border-radius: 100%;
+    width: 400px;
+    height: 400px;
+    position: fixed;
+    top: -160px;
+    left: -160px;
+}
+
+.button {
+    width: 100%;
+    height: 40px;
+    border-radius: 7px;
+    background-color: #0E9D85;
+    margin: 20px 0 5px 0;
+    border: 0px solid magenta;
+    font-size: 15px;
+    color: white;
+}
+
+.buttongoogle {
+    width: 100%;
+    height: 40px;
+    border-radius: 7px;
+    background-color: white;
+    margin: 5px 0 10px 0;
+    border: 2px solid #0E9D85;
+    font-size: 15px;
+    color: rgba(0, 0, 0, 0.747);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 7px;
+
+}
+
+.button:hover{
+    background-color: #0e9d85e0;
+    cursor: pointer;
+}
+
+.buttongoogle:hover{
+    color: black;
+    cursor: pointer;
+}
+
+.inputSpace {
+    width: 500px;
+    margin: auto;
+}
+
+.title {
+    /* background-color: aqua; */
+    display: flex;
+    font-size: 35px;
+    font-weight: 700;
+    margin-top: 20px;
+    font-family: var(--header-font);
+    font-weight: 500;
+    justify-content: center;
+}
+
+.title2 {
+    /* background-color: aqua; */
+    margin: -7px 0 0 0;
+    display: flex;
+    font-size: 18px;
+    font-family: var(--header-font);
+    font-weight: 400;
+}
+
+.input {
+    /* background-color: aqua; */
+    width: 100%;
+    border-radius: 5px;
+    height: 30px;
+    border: 1.5px solid rgb(203, 203, 203);
+}
+
+.input:hover {
+    border: 1.5px solid rgb(179, 179, 179);
+}
+.inputaria{
+    width: 100%;
+    border-radius: 5px;
+    border: 1.5px solid rgb(203, 203, 203);
+
+}
+.forget {
+    display: flex;
+    justify-content: end;
+    font-size: 13px;
+    margin: 10px;
+    color: rgb(140, 140, 140);
+    text-decoration: underline;
+}
+
+.forget:hover {
+    color: rgb(87, 87, 87);
+    cursor: pointer;
+}
+
+img {
+    background: url("google.png");
+    background-size: cover;
+    width: 15px;
+}
+
+.notlogin {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin: 10px 0 10px 0;
+}
+
+.notlogin1 {
+    font-size: 12px;
+    color: rgb(140, 140, 140);
+
+}
+
+.notlogin2 {
+    font-size: 12px;
+    text-decoration: underline;
+    color: rgb(140, 140, 140);
+}
+
+.notlogin2:hover {
+    color: rgb(87, 87, 87);
+    cursor: pointer;
 }
