--- a/src/components/LeadsTable/style.module.css
+++ b/src/components/LeadsTable/style.module.css
@@ -3,6 +3,14 @@
         text-align: center;
 }
 
+#regularTd {
+        max-width: 200px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        padding: 0 20px;
+}
+
 .leadsTable th {
         font-weight: bold;
         border-bottom: 2px solid var(--main-color);
@@ -37,6 +45,14 @@
         position: relative;
 }
 
+.selectInput {
+        height: 70px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+}
+
+
 #filters:hover {
         background-color: transparent;
 }
@@ -46,6 +62,7 @@ select {
         border: 1px solid rgba(222, 226, 233, 1);
         padding: 5px 12px 5px 12px;
         border-radius: 4px;
+        /* width: 100%; */
 }
 
 #filters input:focus {
