--- a/src/components/Button/style.module.css
+++ b/src/components/Button/style.module.css
@@ -72,7 +72,7 @@
     background-color:var(--white-hover);
 } */
   .fill {
-      background-color: var(--green-color);
+      background-color: inherit;
       gap: 6px;
       width: 100%;
       height: 55px;
@@ -85,6 +85,7 @@
       font-family: var(--button-font);
       cursor: pointer;
   }
+
 
   .red {
       background-color: rgb(200, 0, 0);
