--- a/src/components/Plans/style.module.css
+++ b/src/components/Plans/style.module.css
@@ -5,25 +5,35 @@
     margin: 20px;
 }
 
+
 .card {
     box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.2);
     border-radius: 20px;
     border: 1px solid #eee;
     -webkit-transition: 0.3s;
     transition: 0.3s;
-}
-
-.price {
     list-style-type: none;
+
+}
+
+.ribbon {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 3px 0;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+
 }
 
 
-.price:hover {
+
+.card:hover {
     border-radius: 20px;
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24);
 }
 
-.price .header {
+.card .header {
     background-color: #0E9D85;
     color: white;
     font-size: 20px;
@@ -32,17 +42,19 @@
 
 }
 
-.price li {
-    border-bottom: 1px solid #eee;
+.card li {
+    border-bottom: 5px solid #eee;
     padding: 20px;
     text-align: center;
 }
 
-.price.grey {
+.card.grey {
     font-size: 20px;
 }
 
 .button {
+    display: block;
+    margin: 0 auto;
     background-color: #04AA6D;
     border: none;
     color: white;
@@ -50,5 +62,8 @@
     text-align: center;
     text-decoration: none;
     font-size: 18px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
     cursor: pointer;
 }
