--- a/src/pages/Dashboard/style.module.css
+++ b/src/pages/Dashboard/style.module.css
@@ -1,12 +1,17 @@
 .main_container{
   grid-column: span 2;
-}
-.charts_container {
-    display: flex;
+  display: flex;
     flex-wrap: wrap;
     justify-content: center;
-  }
-  .chart-wrapper {
+}
+.charts_container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start; /* כדי שהאלמנטים ייעמדו מימין לשמאל */
+}
+
+  .chart_wrapper {
+    
     margin: 20px;
     padding: 20px;
     background-color: #F5F5F5;
@@ -15,6 +20,7 @@
     max-width: 400px;
     width: 100%;
   }
+  
   .chart_title {
     font-size: 18px;
     font-weight: bold;
