--- a/src/layout/SideBar/style.module.css
+++ b/src/layout/SideBar/style.module.css
@@ -62,7 +62,7 @@ svg {
     flex: 2;
     height: 100%;
     overflow-y: auto;
-
+    border-bottom: 2px solid var(--grayElement);
 }
 
 .liststitle {
@@ -106,7 +106,7 @@ svg {
     border-radius: 8px;
     position: sticky;
     margin: 5px 7px 10px 3px;
-    border-bottom: 2px solid var(--grayElement);
+    /* border-bottom: 2px solid var(--grayElement); */
 }
 
 .item:hover {
