--- a/src/components/Popover/style.module.css
+++ b/src/components/Popover/style.module.css
@@ -1,3 +1,9 @@
+
+
+.container{
+    position: relative;
+    top: auto;
+}
 .mainIcon {
     /* background-color: aqua; */
     position: static;
@@ -7,17 +13,22 @@
 }
 
 .children {
+    display: flex;
+    flex-direction: column;
+    /* position: static; */
     cursor: pointer;
     background-color: transparent;
     border: none;
     padding: 10px;
     width: 100%;
+    
+
 }
 
 .Popover {
 
     background-color: #FFFFFF;
-    width: 209px;
+    /* width: 209px; */
     padding: 10px;
     display: flex;
     position: absolute;
@@ -35,7 +46,7 @@
     list-style: none;
     gap: 5px;
     padding: 5px;
-    justify-content: space-around
+    justify-content: space-around;
 }
 
 .Popover li {
