--- a/src/components/MessagePage/style.module.css
+++ b/src/components/MessagePage/style.module.css
@@ -37,3 +37,10 @@
     display: flex;
     gap: 36px;
 }
+
+.schedulePopUp {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 20px;
+}
