--- a/src/components/MsgQueue/style.module.css
+++ b/src/components/MsgQueue/style.module.css
@@ -1,160 +1,119 @@
-@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
-.container {
-    width: 83.5vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: start;
-    text-align: right;
-    background-color: hsla(0, 0%, 97%, 0.85);
-   
-}
-.allin {
-    width: 600px;
-    height: auto;
-    background-color: rgb(255, 255, 255);
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-right: 100px;
+.allpage {
+    position: relative;
 }
 
-.circle {
-    border: 130px solid rgba(14, 157, 133, 0.103)    ;
-    border-radius: 100%;
-    width: 400px;
-    height: 400px;
-    position: fixed;
-    top: -160px;
-    left: -160px;
-}
-
-.button {
-    width: 100%;
-    height: 40px;
-    border-radius: 7px;
-    background-color: #0E9D85;
-    margin: 20px 0 5px 0;
-    border: 0px solid magenta;
-    font-size: 15px;
-    color: white;
-}
-
-.buttongoogle {
-    width: 100%;
-    height: 40px;
-    border-radius: 7px;
-    background-color: white;
-    margin: 5px 0 10px 0;
-    border: 2px solid #0E9D85;
-    font-size: 15px;
-    color: rgba(0, 0, 0, 0.747);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 7px;
-
-}
-
-.button:hover{
-    background-color: #0e9d85e0;
-    cursor: pointer;
-}
-
-.buttongoogle:hover{
-    color: black;
-    cursor: pointer;
-}
-
-.inputSpace {
-    width: 500px;
-    margin: auto;
-}
-
-.title {
-    /* background-color: aqua; */
-    display: flex;
-    font-size: 35px;
-    font-weight: 700;
-    margin-top: 20px;
-    font-family: var(--header-font);
-    font-weight: 500;
-    justify-content: center;
-}
-
-.title2 {
-    /* background-color: aqua; */
-    margin: -7px 0 0 0;
-    display: flex;
-    font-size: 18px;
-    font-family: var(--header-font);
-    font-weight: 400;
-}
-
-.input {
-    /* background-color: aqua; */
-    width: 100%;
-    border-radius: 5px;
+.Icon2 {
+    width: 30px;
     height: 30px;
-    border: 1.5px solid rgb(203, 203, 203);
-}
-
-.input:hover {
-    border: 1.5px solid rgb(179, 179, 179);
-}
-.inputaria{
-    width: 100%;
-    border-radius: 5px;
-    border: 1.5px solid rgb(203, 203, 203);
-
-}
-.forget {
+    position: fixed;
     display: flex;
-    justify-content: end;
-    font-size: 13px;
-    margin: 10px;
-    color: rgb(140, 140, 140);
-    text-decoration: underline;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 80px;
+    z-index: 7;
+    bottom: 0;
+    left: 380px;
+    margin: 0 0 43px 0;
+    transition: transform 1s; 
 }
 
-.forget:hover {
-    color: rgb(87, 87, 87);
-    cursor: pointer;
+.Icon {
+    width: 30px;
+    height: 30px;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 80px;
+    z-index: 7;
+    bottom: 0;
+    left: 0;
+    margin: 43px;
+    transition: transform 1s; 
 }
 
-img {
-    background: url("google.png");
-    background-size: cover;
-    width: 15px;
+.Icon:hover {
+    transform: rotate(360deg)
+}
+.IconMsg {
+    width: 55px;
+    height: 55px;
+    background-color: #71d5c5;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 80px;
+    z-index: 4;
+    bottom: 0;
+    left: 0;
+    margin: 30px;
+    box-shadow: 2px -2px 10px 1px rgba(0, 0, 0, 0.18);
+    transition: transform 1s , background-color 0.5s ease
+}
+.IconMsg:hover{
+    background-color: #b6f4ea;
+    transform: scale(1.1)
 }
 
-.notlogin {
+.msg {
+    font-weight: 800;
+    padding: 0 5px;
+}
+
+.popup1 {
+    background-color: #71d5c5;
+    height: 55px;
+    width: 400px;
+    position: fixed;
     display: flex;
     justify-content: center;
-    gap: 10px;
-    margin: 10px 0 10px 0;
+    align-items: center;
+    border-radius: 80px;
+    z-index: 4;
+    bottom: 0;
+    left: 0;
+    margin: 30px;
+    box-shadow: 2px -2px 10px 1px rgba(0, 0, 0, 0.18);
 }
 
-.notlogin1 {
-    font-size: 12px;
-    color: rgb(140, 140, 140);
+/* .popup1.active {
+    opacity: 1;
+    transform: translateX(0);
+} */
+
+.all {
+    position: relative;
+}
+.title{
+    width: 95%;
+    display: flex;
+    padding: 10px;
+    justify-content: center;
+    font-weight: 800;
+    font-size: 20px;
+    border-bottom: 1px solid black;
 
 }
+.MsgQueue {
+    position: absolute;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    height: auto;
+    background-color: #d8f2ee;
+    border-top-right-radius: 30px;
+    border-top-left-radius: 30px;
+    bottom: 0;
+    left: 0;
+    padding-bottom: 40px;
+    margin-bottom: 60px;
+    margin-left: 30px;
+    box-shadow: 2px -2px 20px 1px rgba(0, 0, 0, 0.18);
 
-.notlogin2 {
-    font-size: 12px;
-    text-decoration: underline;
-    color: rgb(140, 140, 140);
-}
-
-.notlogin2:hover {
-    color: rgb(87, 87, 87);
-    cursor: pointer;
 }
