--- a/src/components/LeadItem/style.module.css
+++ b/src/components/LeadItem/style.module.css
@@ -18,7 +18,8 @@
       align-items: center;
       justify-content: right;
       border-radius: 8px;
-      padding: 20px, 16px, 20px, 16px;
+      /* padding: 20px, 16px, 20px, 16px; */
+position: relative;
   }
 
   .leadActive {
@@ -61,6 +62,7 @@
       border: 1px solid var(--border-box-color);
       border-radius: 8px;
       margin: 16px;
+      position: relative;
   }
 
 
