--- a/src/components/Popover/style.module.css
+++ b/src/components/Popover/style.module.css
@@ -1,18 +1,19 @@
 
 
 .container{
-  
     position: relative;
     top: auto;
 }
 .mainIcon {
     /* background-color: aqua; */
-    position: static;
+    position: relative;
     width: 100%;
     cursor: pointer;
+
 }
 
 .children {
+    position: relative;
     display: flex;
     flex-direction: column;
     /* position: static; */
@@ -21,6 +22,7 @@
     border: none;
     padding: 10px;
     width: 100%;
+    align-items: center;
    
 }
 
@@ -39,18 +41,19 @@
 }
 
 .Popover ul {
-
     display: flex;
     flex-direction: column;
     list-style: none;
     gap: 5px;
     padding: 5px;
-    justify-content: space-around;
+    width: max-content;
+    align-items: stretch;
 }
 
 .Popover li {
     min-height: 50px;
-    padding: 12px;
+    padding: 12px 6px;
+    /* width: 100%; */
     display: flex;
     justify-content: flex-start;
     align-items: center;
