--- a/src/components/MessageItem/style.module.css
+++ b/src/components/MessageItem/style.module.css
@@ -1,16 +1,8 @@
-  @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-  :root {
-
-      --font: 'Heebo', sans-serif;
-      --title-color: #000000;
-      --details: #6B6B6B;
-      --border-box-color: #F3F3F5;
-  }
 
   /* meaasge box */
 
-  .message {
+  .main{
       width: 100%;
       height: 90px;
       display: flex;
@@ -20,21 +12,15 @@
       gap: 10px;
       border-radius: 8px;
       padding: 20px 16px 20px 16px;
+  }
+
+  .message {
       background-color: white;
   }
 
 
   .messageActive{
     background-color: #F3F3F5;
-    width: 100%;
-    height: 90px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: right;
-    gap: 10px;
-    border-radius: 8px;
-    padding: 20px 16px 20px 16px;
 }
 
 .messageActive .activeIcon{
@@ -57,6 +43,7 @@
       align-items: center;
       border: 1px solid var(--border-box-color);
       border-radius: 8px;
+      flex-shrink: 0;
   }
 
   .activeIcon {
@@ -78,11 +65,18 @@
       font-family: var(--font);
       color: var(--title-color);
       text-align: right;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
   }
 
   .titleAndDetails {
       display: flex;
       flex-direction: column;
+      flex-grow: 1;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
   }
 
   .DateAndTime {
