--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,11 @@ This will automatically apply the specified font family, size, weight, and color
   /* Text color for main headings (h1), set to black */
   --test-border: 2px solid black;
   --grayElement: rgb(232, 232, 232);
+
+  --font: 'Heebo', sans-serif;
+  --title-color: #000000;
+  --details-color: rgb(232, 232, 232);
+  --border-box-color: rgb(243, 243, 245);
 }
 
 * {
