--- a/src/pages/MsgNotReceived/style.module.css
+++ b/src/pages/MsgNotReceived/style.module.css
@@ -11,7 +11,7 @@
    font-weight: 800;
 }
 
-.info{
+.info {
    color: gray;
    font-size: small;
    margin-bottom: 20px;
@@ -32,6 +32,11 @@
    margin-top: 20px;
 }
 
+.msgTable tbody tr:first-child {
+   animation: skelton 1s infinite alternate linear;
+   color: var(--main-color);
+}
+
 .msgTable th,
 .msgTable td {
    padding: 10px;
@@ -46,4 +51,14 @@
 
 .msgTable tr:hover {
    background-color: #f5f5f5;
+}
+
+@keyframes skelton {
+   0% {
+      opacity: 1;
+   }
+
+   100% {
+      opacity: 0.2;
+   }
 }
