--- a/src/components/Login/style.module.css
+++ b/src/components/Login/style.module.css
@@ -1,130 +1,149 @@
-@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 .button {
-    /* display: flex; */
-    /* align-items: center; */
-    /* justify-content: center; */
-    width: 100%;
-    height: 40px;
-    border-radius: 7px;
-    background-color: #0E9D85;
-    margin: 5px 0 5px 0;
-    border: 0px solid magenta;
-    font-size: 15px;
-    color: white;
+  width: 100%;
+  height: 40px;
+  border-radius: 7px;
+  background-color: #0e9d85;
+  margin: 5px 0 5px 0;
+  border: 0px solid magenta;
+  font-size: 15px;
+  color: white;
 }
 
 .buttongoogle {
-    width: 100%;
-    height: 40px;
-    border-radius: 7px;
-    background-color: white;
-    margin: 5px 0 10px 0;
-    border: 2px solid #0E9D85;
-    font-size: 15px;
-    color: rgba(0, 0, 0, 0.747);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 7px;
-
+  width: 100%;
+  height: 40px;
+  border-radius: 7px;
+  background-color: white;
+  margin: 5px 0 10px 0;
+  border: 2px solid #0e9d85;
+  font-size: 15px;
+  color: rgba(0, 0, 0, 0.747);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 7px;
 }
 
-.button:hover{
-    background-color: #0e9d85e0;
-    cursor: pointer;
+.button:hover {
+  background-color: #0e9d85e0;
+  cursor: pointer;
 }
 
-.buttongoogle:hover{
-    color: black;
-    cursor: pointer;
+.buttongoogle:hover {
+  color: black;
+  cursor: pointer;
 }
 
 .inputSpace {
-    width: 350px;
-    margin: auto;
+  width: 350px;
+  margin: auto;
 }
 
 .title {
-    /* background-color: aqua; */
-    display: flex;
-    font-size: 35px;
-    font-weight: 700;
-    margin-top: 20px;
-    font-family: var(--header-font);
-    font-weight: 500;
+  display: flex;
+  font-size: 35px;
+  font-weight: 700;
+  margin-top: 20px;
+  font-family: var(--header-font);
+  font-weight: 500;
 }
 
 .title2 {
-    /* background-color: aqua; */
-    margin: -7px 0 0 0;
-    display: flex;
-    font-size: 18px;
-    font-family: var(--header-font);
-    font-weight: 400;
+  margin: -7px 0 0 0;
+  display: flex;
+  font-size: 18px;
+  font-family: var(--header-font);
+  font-weight: 400;
 }
 
 .input {
-    /* background-color: aqua; */
-    width: 100%;
-    border-radius: 5px;
-    height: 30px;
-    border: 1.5px solid rgb(203, 203, 203);
+  width: 100%;
+  border-radius: 5px;
+  height: 30px;
+  border: 1.5px solid rgb(203, 203, 203);
+  padding-left: 30px; /* Adjusted for left padding */
 }
 
 .input:hover {
-    border: 1.5px solid rgb(179, 179, 179);
+  border: 1.5px solid rgb(179, 179, 179);
 }
 
 .forget {
-    /* background-color: aqua; */
-    display: flex;
-    justify-content: end;
-    font-size: 13px;
-    margin: 10px;
-    color: rgb(140, 140, 140);
-    text-decoration: underline;
+  display: flex;
+  justify-content: end;
+  font-size: 13px;
+  margin: 10px;
+  color: rgb(140, 140, 140);
+  text-decoration: underline;
 }
 
 .forget:hover {
-    color: rgb(87, 87, 87);
-    cursor: pointer;
+  color: rgb(87, 87, 87);
+  cursor: pointer;
 }
 
 img {
-    background: url("google.png");
-    background-size: cover;
-    width: 15px;
+  background: url("google.png");
+  background-size: cover;
+  width: 15px;
 }
 
 .notlogin {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    margin: 10px 0 10px 0;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin: 10px 0 10px 0;
 }
 
 .notlogin1 {
-    font-size: 12px;
-    color: rgb(140, 140, 140);
-
+  font-size: 12px;
+  color: rgb(140, 140, 140);
 }
 
 .notlogin2 {
-    font-size: 12px;
-    text-decoration: underline;
-    color: rgb(140, 140, 140);
+  font-size: 12px;
+  text-decoration: underline;
+  color: rgb(140, 140, 140);
 }
 
 .notlogin2:hover {
-    color: rgb(87, 87, 87);
-    cursor: pointer;
+  color: rgb(87, 87, 87);
+  cursor: pointer;
 }
 
 .circle {
-    background-color: #0E9D85;
-    width: 100px;
-    height: 100px;
-    position: fixed;
-    align-items: center;
+  background-color: #0e9d85;
+  width: 100px;
+  height: 100px;
+  position: fixed;
+  align-items: center;
+}
+
+.passwordWrapper {
+  position: relative;
+}
+
+.passwordContainer {
+  position: relative;
+  width: 100%;
+}
+
+.showPasswordButton {
+  position: absolute;
+  top: 50%;
+  left: 10px; /* Changed to left */
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.showPasswordButton:focus {
+  outline: none;
 }
