--- a/src/components/Terms/style.module.css
+++ b/src/components/Terms/style.module.css
@@ -3,3 +3,12 @@
   overflow-y: auto;
   padding: 20px;
 }
+.link {
+  color: #007bff;
+  text-decoration: none;
+  margin: 0 5px;
+}
+
+.link:hover {
+  text-decoration: underline;
+}
