--- a/src/components/PopUp/style.module.css
+++ b/src/components/PopUp/style.module.css
@@ -1,39 +1,69 @@
+@import url("https://fonts.googleapis.com/css2?family=Secular+One&display=swap");
+
 .container {
   position: fixed;
   top: 0;
-  left: 0;
   right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  flex-direction: column;
+  background-color: rgba(0, 0, 0, 0.262);
+  width: 100vw;
+  height: 100vh;
+  z-index: 100;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  border-radius: 8px;
+}
+
+/* 
+.allpopup{
+    display: flex;
+    justify-content: center;
+    /* border: 2px solid firebrick;  
+     z-index: 100; 
+}  */
+
+@keyframes slideIn {
+  0% {
+    transform: scale(0.9);
+    opacity: 0;
+  }
+
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
 
 .popup {
-  background-color: white;
-  width: 80%;
-  max-width: 500px;
+  /* max-width: 700px; */
+  /* width: 800px;
+    height: 400px; */
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(255, 255, 255);
+  align-self: center;
+  position: relative;
+  animation: slideIn 0.3s ease-in-out;
+  padding: 15px;
+  justify-content: center;
+  align-items: center;
   border-radius: 8px;
-  overflow: hidden;
+
+  /* margin: 10px; */
 }
 
 .top {
-  display: flex;
+  /* border-bottom: 1px solid #E8E8E8; */
   justify-content: space-between;
+  display: flex;
+  flex-direction: row;
   align-items: center;
-  padding: 10px;
-  background-color: #f5f5f5;
-  border-bottom: 1px solid #ddd;
+  padding: 10px 20px 10px 20px;
+  width: 100%;
 }
 
 .close {
+  width: 24px;
   cursor: pointer;
-}
-
-.content {
-  padding: 20px;
-  max-height: 400px;
-  overflow-y: auto;
 }
