--- a/src/pages/Plans/style.module.css
+++ b/src/pages/Plans/style.module.css
@@ -50,7 +50,7 @@
 
 .cardsContainer {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
   width: 80%;
   padding: 1vw;
   /* justify-content: center; */
@@ -62,6 +62,9 @@
 }
 
 .card {
+  justify-content: space-between;
+  width: 100%; /* 25% מרוחב הקונטיינר */
+  height: 100%; /* 50% מגובה הקונטיינר */
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -115,6 +118,10 @@
   font-size: 20px;
 }
 
+#call {
+  font-size: 25px;
+  font-weight: 600;
+}
 #price {
   font-weight: 650;
   font-size: 50px;
